--- a/palindromo/index.html
+++ b/palindromo/index.html
@@ -14,7 +14,7 @@
     <title>Palindromo</title>
   </head>
   <body>
-    <h1>Gioco del FizzBuzz</h1>
+    <h1>Palindromo</h1>
     <input id="input" type="text" name="" placeholder="Insert a palindrom..." value="">
     <button id="btn" type="button" name="button">Check!</button>
 
